--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "swr": "^2.2.5",
-    "vite": "^5.2.10",
+    "vite": "^5.2.14",
     "vite-jsconfig-paths": "^2.0.1",
     "web-vitals": "^3.5.2",
     "yup": "^1.3.3"
@@ -101,5 +101,12 @@
     "react-error-overlay": "6.0.11",
     "sass": "^1.71.1",
     "vitest": "^2.1.6"
+  },
+  "resolutions": {
+    "cross-spawn": "7.0.5",
+    "braces": "3.0.3",
+    "micromatch": "4.0.8",
+    "vite": "5.2.14",
+    "rollup": "4.22.4"
   }
 }
